--- a/image processer/requirements.txt
+++ b/image processer/requirements.txt
@@ -12,8 +12,9 @@ scipy>=1.4.1
 torch>=1.7.0
 torchvision>=0.8.1
 tqdm>=4.41.0
-onnxruntime
-onnxruntime-gpu
+onnx-1.11
+onnxruntime-1.11.1
+onnxruntime-gpu-1.11.1
 
 # plotting ------------------------------------
 
